// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative udp-scroll-thin"
      >
        <div
          class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-r left-0 opacity-0"
          data-testid="udp-scroll-wrapper-grad-l"
        />
        <div
          class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-l right-0 opacity-0"
          data-testid="udp-scroll-wrapper-grad-r"
        />
        <div
          class="h-full overflow-x-auto focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          data-testid="udp-scroll-wrapper-ref"
        >
          <div>
            test content
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative udp-scroll-thin"
    >
      <div
        class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-r left-0 opacity-0"
        data-testid="udp-scroll-wrapper-grad-l"
      />
      <div
        class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-l right-0 opacity-0"
        data-testid="udp-scroll-wrapper-grad-r"
      />
      <div
        class="h-full overflow-x-auto focus:outline-hidden focus:ring-2 focus:ring-primary-300"
        data-testid="udp-scroll-wrapper-ref"
      >
        <div>
          test content
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`snapshot > matches snapshot with custom class 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative udp-scroll-thin pt-8"
      >
        <div
          class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-r left-0 opacity-0"
          data-testid="udp-scroll-wrapper-grad-l"
        />
        <div
          class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-l right-0 opacity-0"
          data-testid="udp-scroll-wrapper-grad-r"
        />
        <div
          class="h-full overflow-x-auto focus:outline-hidden focus:ring-2 focus:ring-primary-300"
          data-testid="udp-scroll-wrapper-ref"
        >
          <div>
            test content
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative udp-scroll-thin pt-8"
    >
      <div
        class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-r left-0 opacity-0"
        data-testid="udp-scroll-wrapper-grad-l"
      />
      <div
        class="absolute pointer-events-none inset-y-0 w-16 z-10 from-white to-transparent transition-opacity duration-350 bg-gradient-to-l right-0 opacity-0"
        data-testid="udp-scroll-wrapper-grad-r"
      />
      <div
        class="h-full overflow-x-auto focus:outline-hidden focus:ring-2 focus:ring-primary-300"
        data-testid="udp-scroll-wrapper-ref"
      >
        <div>
          test content
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
